# OpenCLStub

./: CMakeLists.txt  README.md
include/: opencl_stub.h
src/: opencl_stub.cc
test/: test.cc
